# ghidra-callgraph

./: README.md  pyproject.toml
ghidra_callgraph/: __init__.py  __main__.py  cli.py  generator.py
